# erc1155

./: Cargo.toml  Readme.md
interaction/: devnet.snippets.sh
meta/: Cargo.toml
scenarios/: empty.scen.json
src/: formats.rs  lib.rs  storage.rs
tests/: empty_scenario_rs_test.rs
wasm/: Cargo.toml
wasm/src/: lib.rs
