[package]
name = "erc1155-wasm"
version = "0.0.0"
edition = "2018"
publish = false
authors = [ "you",]

[lib]
crate-type = [ "cdylib",]

[workspace]
members = [ ".",]

[dev-dependencies]

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"

[dependencies.erc1155]
path = ".."

[dependencies.multiversx-sc-wasm-adapter]
version = "0.43.2"
